2 Local Kubernetes/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: account
  labels:
    name: account
spec:
  rules:
  - host: account.alinefinancial.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: account
            port: 
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank
  labels:
    name: bank
spec:
  rules:
  - host: bank.alinefinancial.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: account
            port: 
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: card
  labels:
    name: card
spec:
  rules:
  - host: card.alinefinancial.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: account
            port: 
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transaction
  labels:
    name: transaction
spec:
  rules:
  - host: transaction.alinefinancial.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: transaction
            port: 
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: underwriter
  labels:
    name: underwriter
spec:
  rules:
  - host: underwriter.alinefinancial.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: underwriter
            port: 
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user
  labels:
    name: user
spec:
  rules:
  - host: user.alinefinancial.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: user
            port: 
              number: 8080
